--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   doctoral student, Michigan State University
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mmore500.github.io" # the base hostname & protocol for your site
-twitter_username: mmore500
+twitter_username: morenomatthewa
 github_username:  mmore500
 
 # Build settings
