Add blog section, photography workflow draft post

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -7,5 +7,8 @@
 - title: "Research & Projects"
   href: "/research/"
 
+- title: "Writing"
+  href: "/writing/"
+
 - title: "Photos"
   href: "http://mmore500.tumblr.com"
