Fill out nature project in portfolio

--- a/_data/nature.yml
+++ b/_data/nature.yml
@@ -1,35 +1,39 @@
-- href: "/img/welcome_dogs.jpg"
-  title: "dogwalker on the waterfront"
-  caption: "Hoboken, NJ summer 2016"
+- href: "/img/welcome_mountainmeadow.jpg"
+  title: "<i>Erythronium montanum</i> near Christine Falls"
+  caption: "Mount Rainier National Park, WA summer 2017"
 
-- href: "/img/welcome_ferns1.jpg"
-  title: "<i>Athyrium filix-femina</i> near Peavey Arboretum"
-  caption: "Corvallis, OR spring 2016"
+- href: "/img/welcome_slug.jpg"
+  title: "<i>Ariolimax colombianus</i> at Jackson-Frazier Wetland"
+  caption: "Corvallis, OR summer 2017"
 
-- href: "/img/welcome_ferns2.jpg"
-  title: "<i>Athyrium filix-femina</i> near Peavey Arboretum"
-  caption: "Corvallis, OR spring 2016"
-
-- href: "/img/welcome_flowers.jpg"
-  title: "<i>Penstemon strictus</i> at Chip Ross park"
-  caption: "Corvallis, OR summer 2016"
-
-- href: "/img/welcome_lamppost.jpg"
-  title: "sunset at NW Mirador Pl"
-  caption: "Corvallis, OR summer 2016"
-
-- href: "/img/welcome_road.jpg"
-  title: "NW Soap Creek Road"
-  caption: "Corvallis, OR summer 2016"
-
-- href: "/img/welcome_strawberries.jpg"
-  title: "<i>Fragaria × ananassa</i> at USDA ARS HCRL"
-  caption: "Corvallis, OR summer 2016"
+- href: "/img/welcome_dew.jpg"
+  title: "dewy morning on Vineyard Mountain"
+  caption: "Corvallis, OR summer 2017"
 
 - href: "/img/welcome_sunrisemoonset.jpg"
   title: "moonset at sunrise near Chip Ross park"
   caption: "Corvallis, OR summer 2016"
 
-- href: "/img/welcome_thistle.jpg"
-  title: "<i>Cirsium vulgare</i> at Owens Farm"
-  caption: "Corvallis, OR summer 2016"
+- href: "/img/nature-bokeh.jpg"
+  title: "leaves near Fee hall"
+  caption: "East Lansing, MI summer 2017"
+
+- href: "/img/nature-coastline.jpg"
+  title: "Queensland coastline near Lizard island"
+  caption: "Cairns, AUS winter 2016"
+
+- href: "/img/nature-curve.jpg"
+  title: "<i>Veratrum californicum</i> near Christine Falls"
+  caption: "Mount Rainier National Park, WA summer 2017"
+
+- href: "/img/nature-leaf.jpg"
+  title: "<i>Rubus</i> leaf near Timberhill"
+  caption: "Corvallis, OR summer 2017"
+
+- href: "/img/nature-window.jpg"
+  title: "beetle at Wells hall"
+  caption: "East Lansing, MI fall 2017"
+
+- href: "/img/welcome_translucentfern.jpg"
+  title: "fern at sunset"
+  caption: "Tacoma, WA spring 2017"
