Implement people project

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,35 +1,39 @@
-- href: "/img/welcome_dogs.jpg"
-  title: "dogwalker on the waterfront"
-  caption: "Hoboken, NJ summer 2016"
+- href: "/img/people-sunset.jpg"
+  title: "sunset viewers at the Charles steet garage"
+  caption: "East Lansing, MI summer 2017"
 
-- href: "/img/welcome_ferns1.jpg"
-  title: "<i>Athyrium filix-femina</i> near Peavey Arboretum"
-  caption: "Corvallis, OR spring 2016"
+- href: "/img/people-meditate.jpg"
+  title: "meditators at Gas Works Park"
+  caption: "Seattle, WA summer 2017"
 
-- href: "/img/welcome_ferns2.jpg"
-  title: "<i>Athyrium filix-femina</i> near Peavey Arboretum"
-  caption: "Corvallis, OR spring 2016"
+- href: "/img/people-subject.jpg"
+  title: "a cooperative photographic subject"
+  caption: "Corvallis, OR summer 2017"
 
-- href: "/img/welcome_flowers.jpg"
-  title: "<i>Penstemon strictus</i> at Chip Ross park"
-  caption: "Corvallis, OR summer 2016"
+- href: "/img/people-beach.jpg"
+  title: "vacationers at Lizard island"
+  caption: "QLD, AUS winter 2016"
 
-- href: "/img/welcome_lamppost.jpg"
-  title: "sunset at NW Mirador Pl"
-  caption: "Corvallis, OR summer 2016"
+- href: "/img/people-door.jpg"
+  title: "woman at the door"
+  caption: "East Lansing, MI fall 2017"
 
-- href: "/img/welcome_road.jpg"
-  title: "NW Soap Creek Road"
-  caption: "Corvallis, OR summer 2016"
+- href: "/img/people-dtw.jpg"
+  title: "pilot at DTW"
+  caption: "Detroit, MI summer 2017"
 
-- href: "/img/welcome_strawberries.jpg"
-  title: "<i>Fragaria × ananassa</i> at USDA ARS HCRL"
-  caption: "Corvallis, OR summer 2016"
+- href: "/img/people-escalator.jpg"
+  title: "man on an escalator"
+  caption: "Detroit, MI summer 2017"
 
-- href: "/img/welcome_sunrisemoonset.jpg"
-  title: "moonset at sunrise near Chip Ross park"
-  caption: "Corvallis, OR summer 2016"
+- href: "/img/people-passerby.jpg"
+  title: "passerby at biophysical sciences building"
+  caption: "East Lansing, MI fall 2017"
 
-- href: "/img/welcome_thistle.jpg"
-  title: "<i>Cirsium vulgare</i> at Owens Farm"
-  caption: "Corvallis, OR summer 2016"
+- href: "/img/welcome_people.jpg"
+  title: "people at Gas Works Park"
+  caption: "Seattle, WA summer 2017"
+
+- href: "/img/people-fountain.jpg"
+  title: "traveler at DTW"
+  caption: "Detroit, MI summer 2017"
