Switch out beetle picture

--- a/_data/nature.yml
+++ b/_data/nature.yml
@@ -30,9 +30,9 @@
   title: "<i>Rubus</i> leaf near Timberhill"
   caption: "Corvallis, OR summer 2017"
 
-- href: "/img/nature-window.jpg"
-  title: "beetle at Wells hall"
-  caption: "East Lansing, MI fall 2017"
+- href: "/img/welcome_meadow.jpg"
+  title: "meadow at Martin Luther King, Jr. Park"
+  caption: "Corvallis, OR summer 2017"
 
 - href: "/img/welcome_translucentfern.jpg"
   title: "fern at sunset"
