--- a/_data/devolab_posts.yml
+++ b/_data/devolab_posts.yml
@@ -1,7 +1,11 @@
-- title: "Evolvability Series"
-  href: "http://devosoft.org/blog-series-on-evolvability/"
-  date: 2017-10-06
+- title: "Tidbits from a Workshop on Communicating Science"
+  href: "http://devosoft.org/tidbits-from-a-workshop-on-communicating-science/"
+  date: 2017-12-08
 
 - title: "Information Theory through Toy Examples"
   href: "http://devosoft.org/information-theory-through-toy-examples/"
   date: 2017-10-26
+
+- title: "Evolvability Series"
+  href: "http://devosoft.org/blog-series-on-evolvability/"
+  date: 2017-10-06
