--- a/_data/devolab_posts.yml
+++ b/_data/devolab_posts.yml
@@ -1,3 +1,7 @@
+- title: "Reflections on My First Semester at MacDonald Middle School"
+  href: "http://devosoft.org/reflections-on-my-first-semester-at-macdonald-middle-school/"
+  date: 2017-01-18
+
 - title: "Tidbits from a Workshop on Communicating Science"
   href: "http://devosoft.org/tidbits-from-a-workshop-on-communicating-science/"
   date: 2017-12-08
