Add emoji plugin to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@ url: "https://mmore500.github.io" # the base hostname & protocol for your site
 twitter_username: morenomatthewa
 github_username:  mmore500
 
+plugins:
+  - jemoji
+
 # Build settings
 markdown: kramdown
 
