Update, reorganize blog section

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -7,8 +7,8 @@
 - title: "Research & Projects"
   href: "/research/"
 
-- title: "Writing"
-  href: "/writing/"
+- title: "Blog"
+  href: "/blog/"
 
 - title: "Photos"
   href: "/portfolio/"
