--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Matthew Andres Moreno
-email: mmore500@msu.edu
+email: m.more500@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   doctoral student, Michigan State University
 baseurl: "" # the subpath of your site, e.g. /blog
