Update portfolio and welcome images

--- a/_data/architecture.yml
+++ b/_data/architecture.yml
@@ -33,6 +33,6 @@
   title: "sunset behind Aurora Bridge"
   caption: "Seattle, WA summer 2017"
 
-- href: "/img/arch-plantbio.jpg"
-  title: "plant biology building at dusk"
-  caption: "East Lansing, WA fall 2017"
+- href: "/img/arch-stairway.jpg"
+  title: "shadows on Oakridge stairway"
+  caption: "East Lansing, MI spring 2018"
