--- a/_data/images.yml
+++ b/_data/images.yml
@@ -82,9 +82,6 @@
 - href: "/img/welcome_oppfern.jpg"
   caption: "fern near Oppenheimer cafe <br /> Tacoma, WA spring 2017"
 
-- href: "/img/welcome_plantlife.jpg"
-  caption: "spring life near theme row <br /> Tacoma, WA spring 2017"
-
 - href: "/img/welcome_puddles.jpg"
   caption: "puddle at sunset <br /> Tacoma, WA spring 2017"
 
@@ -267,3 +264,12 @@
 
 - href: "/img/welcome_baldflowers.jpg"
   caption: "flowers near Bald Hill <br /> Corvallis, OR summer 2017"
+
+- href: "/img/welcome_passersby.jpg"
+  caption: "passersby at biophysical sciences <br /> East Lansing, MI fall 2017"
+
+- href: "/img/welcome_escalator.jpg"
+  caption: "man on an escalator <br /> Detroit, MI summer 2017"
+
+- href: "/img/welcome_door.jpg"
+  title: "woman at the door <br /> East Lansing, MI fall 2017"
