--- a/_data/nature.yml
+++ b/_data/nature.yml
@@ -2,6 +2,10 @@
   title: "<i>Erythronium montanum</i> near Christine Falls"
   caption: "Mount Rainier National Park, WA summer 2017"
 
+- href: "/img/nature-soapcreek.jpg"
+  title: "last light over Soap Creek Valley"
+  caption: "Corvallis, OR summer 2018"
+
 - href: "/img/welcome_slug.jpg"
   title: "<i>Ariolimax colombianus</i> at Jackson-Frazier Wetland"
   caption: "Corvallis, OR summer 2017"
