--- a/_data/people.yml
+++ b/_data/people.yml
@@ -2,36 +2,32 @@
   title: "sunset viewers at the Charles steet garage"
   caption: "East Lansing, MI summer 2017"
 
+- href: "/img/people-ryan.jpg"
+  title: "Ryan makes a fall visit"
+  caption: "Superior Township, MI fall 2018"
+
+- href: "/img/people-travis.jpg"
+  title: "Travis at BEACON science outreach"
+  caption: "East Lansing, MI spring 2018"
+
 - href: "/img/people-meditate.jpg"
   title: "meditators at Gas Works Park"
   caption: "Seattle, WA summer 2017"
 
-- href: "/img/people-subject.jpg"
-  title: "a cooperative photographic subject"
+- href: "/img/people-nathan.jpg"
+  title: "Nathan behind the hospital"
   caption: "Corvallis, OR summer 2017"
 
 - href: "/img/people-beach.jpg"
   title: "vacationers at Lizard island"
   caption: "QLD, AUS winter 2016"
 
-- href: "/img/people-door.jpg"
-  title: "woman at the door"
-  caption: "East Lansing, MI fall 2017"
-
 - href: "/img/people-dtw.jpg"
   title: "pilot at DTW"
   caption: "Detroit, MI summer 2017"
 
-- href: "/img/people-escalator.jpg"
-  title: "man on an escalator"
-  caption: "Detroit, MI summer 2017"
-
-- href: "/img/people-passerby.jpg"
-  title: "passerby at biophysical sciences building"
-  caption: "East Lansing, MI fall 2017"
-
 - href: "/img/welcome_people.jpg"
-  title: "people at Gas Works Park"
+  title: "silhouettes at Gas Works Park"
   caption: "Seattle, WA summer 2017"
 
 - href: "/img/people-fountain.jpg"
