Update welcome images

--- a/_data/welcome.yml
+++ b/_data/welcome.yml
@@ -4,18 +4,18 @@
 
 - href: "/img/welcome-ferns1.jpg"
   title: "<i>Athyrium filix-femina</i> near Peavey Arboretum"
-  caption: " Corvallis, OR spring 2016"
+  caption: "Corvallis, OR spring 2016"
 
 - href: "/img/welcome-ferns2.jpg"
   title: "<i>Athyrium filix-femina</i> near Peavey Arboretum"
-  caption: " Corvallis, OR spring 2016"
+  caption: "Corvallis, OR spring 2016"
 
 - href: "/img/welcome-flowers.jpg"
   title: "<i>Penstemon strictus</i> at Chip Ross park"
   caption: "Corvallis, OR summer 2016"
 
 - href: "/img/welcome-lamppost.jpg"
-  title: "sunset at NW Mirador P"
+  title: "sunset at NW Mirador Place"
   caption: "Corvallis, OR summer 2016"
 
 - href: "/img/welcome-road.jpg"
@@ -28,62 +28,62 @@
 
 - href: "/img/welcome-thistle.jpg"
   title: "<i>Cirsium vulgare</i> at Owens Farm"
-  caption: " Corvallis, OR summer 2016"
+  caption: "Corvallis, OR summer 2016"
 
 - href: "/img/welcome-beachsunset.jpg"
   title: "an oil rig at sunset"
-  caption: " Santa Barbara, CA fall 2016"
+  caption: "Santa Barbara, CA fall 2016"
 
 - href: "/img/welcome-grain.jpg"
   title: "sunset on Lester Ave"
-  caption: " Corvallis, OR summer 2016"
+  caption: "Corvallis, OR summer 2016"
 
 - href: "/img/welcome-island.jpg"
   title: "the view from Cook's Look"
-  caption: " Lizard Island National Park, AUS winter 2016"
+  caption: "Lizard Island National Park, Australia winter 2016"
 
 - href: "/img/welcome-islandfern.jpg"
   title: "life on the island"
-  caption: " Lizard Island National Park, AUS winter 2016"
+  caption: "Lizard Island National Park, Australia winter 2016"
 
 - href: "/img/welcome-jungle.jpg"
   title: "life in the jungle"
-  caption: "Mount Hypipamee National Park, AUS winter 2016"
+  caption: "Mount Hypipamee National Park, Australia winter 2016"
 
 - href: "/img/welcome-peavey.jpg"
-  title: "sunrise at Peavey Arboretum"
-  caption: " Corvallis, OR spring 2017"
+  title: "<i>Oemleria cerasiformis</i> at dawn near Peavey Arboretum"
+  caption: "Corvallis, OR spring 2017"
 
 - href: "/img/welcome-serratedleaves.jpg"
   title: "serrated leaves at Peavey Arboretum"
-  caption: " Corvallis, OR summer 2016"
+  caption: "Corvallis, OR summer 2016"
 
 - href: "/img/welcome-spiderweb.jpg"
   title: "spider web at the University of Puget Sound"
-  caption: " Tacoma, WA fall 2016"
+  caption: "Tacoma, WA fall 2016"
 
 - href: "/img/welcome-bee.jpg"
   title: "<i>Bombus pennsylvanicus</i> at work"
-  caption: " Corvallis, OR summer 2016"
+  caption: "Corvallis, OR summer 2016"
 
 - href: "/img/welcome-moss.jpg"
   title: "mosssy branch on Vineyard Mountain"
-  caption: " Corvallis, OR spring 2017"
+  caption: "Corvallis, OR spring 2017"
 
 - href: "/img/welcome-translucent.jpg"
   title: "translucent leaf at sunset"
-  caption: " Corvallis, OR winter 2016"
+  caption: "Corvallis, OR winter 2016"
 
 - href: "/img/welcome-window.jpg"
   title: "dog in the window"
-  caption: " Columbus, OH summer 2016"
+  caption: "Columbus, OH summer 2016"
 
 - href: "/img/welcome-airport.jpg"
   title: "sunset at Hartsfield-Jackson Atlanta International Airport"
   caption: "Atlanta, GA winter 2017"
 
 - href: "/img/welcome-foliage.jpg"
-  title: "foliage at Peavey Arboretum"
+  title: "<i>Geranium robertianum</i> at Peavey Arboretum"
   caption: "Corvallis, OR spring 2016"
 
 - href: "/img/welcome-ladybug.jpg"
@@ -92,7 +92,7 @@
 
 - href: "/img/welcome-lizardsunset.jpg"
   title: "inbetween day and night from Cook's Look"
-  caption: "Lizard Island National Park, AUS winter 2016"
+  caption: "Lizard Island National Park, Australia winter 2016"
 
 - href: "/img/welcome-oppfern.jpg"
   title: "fern near Oppenheimer cafe"
@@ -227,7 +227,7 @@
   caption: "Corvallis, OR summer 2017"
 
 - href: "/img/welcome-blueflower.jpg"
-  title: "blue flower at Martin Luther King, Jr. Park"
+  title: "<i>Linum bienne</i> at Martin Luther King, Jr. Park"
   caption: "Corvallis, OR summer 2017"
 
 - href: "/img/welcome-scaleleaf.jpg"
@@ -235,7 +235,7 @@
   caption: "Corvallis, OR summer 2017"
 
 - href: "/img/welcome-fairyflower.jpg"
-  title: "flowers on Old Growth Trail"
+  title: "<i>Vancouveria hexandra</i> on Old Growth Trail"
   caption: "Corvallis, OR summer 2017"
 
 - href: "/img/welcome-pods.jpg"
@@ -251,7 +251,7 @@
   caption: "Corvallis, OR summer 2017"
 
 - href: "/img/welcome-brightflower.jpg"
-  title: "flower on Bald Hill"
+  title: "<i>Lonicera hispidula</i> on Bald Hill"
   caption: "Corvallis, OR summer 2017"
 
 - href: "/img/welcome-dunnfern.jpg"
@@ -321,3 +321,171 @@
 - href: "/img/welcome-portfolio-circlepine.jpg"
   title: "branch silhouette"
   caption: "East Lansing, MI summer 2017"
+
+- href : "/img/welcome-blinds.jpg"
+  title : "last light at Oakridge"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-bottle.jpg"
+  title : "cooler with plastic bottle outside Oakridge"
+  caption : "East Lansing, MI summer 2018"
+
+- href : "/img/welcome-bugwindow.jpg"
+  title : "<i>Coleoptera</i> at Wells Hall"
+  caption : "East Lansing, MI fall 2017"
+
+- href : "/img/welcome-catwindow.jpg"
+  title : "cat in the window at Oakridge"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-ceiling.jpg"
+  title : "ceiling tiles at biophysical sciences"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-claytoniaperfoliata.jpg"
+  title : "<i>Claytonia perfoliata</i> in McDonald Forest"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-curvedfern.jpg"
+  title : "<i>Polystichum</i> near Lollypop Loop"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-ducksrock.jpg"
+  title : "<i>Anas platyrhynchos</i> on the Red Cedar River"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-duskleaves.jpg"
+  title : "dusk at Bald Hill"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-fence.jpg"
+  title : "fence and powerlines near Oakridge"
+  caption : "East Lansing, MI summer 2018"
+
+- href : "/img/welcome-fernshadow.jpg"
+  title : "<i>Polystichum</i> and linear-lanceolate leaf in McDonald Forest"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-fishbeach.jpg"
+  title : "fish on the beach"
+  caption : "Holland, MI spring 2018"
+
+- href : "/img/welcome-horsecar.jpg"
+  title : "<i>Equus</i> near Sulphur Springs"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-jacksonprattdrains.jpg"
+  title : "Jackson-Pratt Drain"
+  caption : "Hayward, CA summer 2018"
+
+- href : "/img/welcome-japandeer.jpg"
+  title : "<i>Cervus nippon</i> near Tōdai-Ji Hokke-dō"
+  caption : "Nara, Japan summer 2018"
+
+- href : "/img/welcome-japanlamps.jpg"
+  title : "Kake-bonbori at Yasaka Shrine"
+  caption : "Kyoto, Japan summer 2018"
+
+- href : "/img/welcome-japanspider.jpg"
+  title : "spider and web"
+  caption : "Arishiyama, Japan summer 2018"
+
+- href : "/img/welcome-martiniqueleaf1.jpg"
+  title : "sunlit leaf"
+  caption : "Martinique, France winter 2017"
+
+- href : "/img/welcome-martiniqueleaf2.jpg"
+  title : "sunlit leaf"
+  caption : "Martinique, France winter 2017"
+
+- href : "/img/welcome-mcdonaldleaf.jpg"
+  title : "leaves near Sulphur Springs"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-msushadow.jpg"
+  title : "twig silhouette"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-owlwall.jpg"
+  title : "plastic owl and camera"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-passingtrain.jpg"
+  title : "near Kyoto Station"
+  caption : "Kyoto, Japan summer 2018"
+
+- href : "/img/welcome-peaveyflower.jpg"
+  title : "<i>Geranium robertianum</i> near Peavey Arboretum"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-plasticdogs.jpg"
+  title : "plastic dogs in Gion"
+  caption : "Kyto, Japan summer 2018"
+
+- href : "/img/welcome-raincar.jpg"
+  title : "rain in the Neogen parking lot"
+  caption : "Lansing, MI summer 2018"
+
+- href : "/img/welcome-redgates.jpg"
+  title : "the red gates of Fushimi Inari Taisha"
+  caption : "Kyoto, Japan summer 2018"
+
+- href : "/img/welcome-ripplewater.jpg"
+  title : "ocean water"
+  caption : "Martinique, France winter 2017"
+
+- href : "/img/welcome-road720.jpg"
+  title : "Road 720"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-seagullbeach.jpg"
+  title : "seagull on the beach"
+  caption : "Holland, MI spring 2018"
+
+- href : "/img/welcome-seagullbridge.jpg"
+  title : "Mackinac Bridge"
+  caption : "Mackinaw City, MI summer 2018"
+
+- href : "/img/welcome-skysunrise.jpg"
+  title : "morning in the sky"
+  caption : "American Airlines summer 2018"
+
+- href : "/img/welcome-streetshadow.jpg"
+  title : "shadows on E Michigan Ave"
+  caption : "East Lansing, MI summer 2018"
+
+- href : "/img/welcome-sunstreak.jpg"
+  title : "sun beam west of the Lewisburg Saddle"
+  caption : "Corvallis, OR summer 2018"
+
+- href : "/img/welcome-tokyophone.jpg"
+  title : "phone booth near Shibuya"
+  caption : "Tokyo, Japan summer 2018"
+
+- href : "/img/welcome-squirrel.jpg"
+  title : "<i>Sciurus niger</i> near Oakridge"
+  caption : "East Lansing, MI spring 2018"
+
+- href : "/img/welcome-catsitting1.jpg"
+  title : "catsitting"
+  caption : "East Lansing, MI summer 2017"
+
+- href : "/img/welcome-catsitting2.jpg"
+  title : "catsitting"
+  caption : "East Lansing, MI summer 2017"
+
+- href : "/img/welcome-duskfern.jpg"
+  title : "dusk near Chip Ross Park"
+  caption : "Corvallis, OR winter 2017"
+
+- href : "/img/welcome-frandor1.jpg"
+  title : "behind Frandor"
+  caption : "Lansing, MI fall 2017"
+
+- href : "/img/welcome-frandor2.jpg"
+  title : "behind Frandor"
+  caption : "Lansing, MI fall 2017"
+
+- href : "/img/welcome-milkjugs.jpg"
+  title : "milk jugs at the recycling center"
+  caption : "East Lansing, MI winter 2017"
