Add more welcome photos

--- a/_data/welcome.yml
+++ b/_data/welcome.yml
@@ -489,3 +489,139 @@
 - href : "/img/welcome-milkjugs.jpg"
   title : "milk jugs at the recycling center"
   caption : "East Lansing, MI winter 2017"
+
+- href : "/img/welcome-20mph.jpg"
+  title : "road to Dimple Hill"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-benttree.jpg"
+  title : "<i>Polystichum munitum</i> assemblage west of the saddle"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-biker.jpg"
+  title : "montain biker on Road 600"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-branchlight.jpg"
+  title : "sun through the fog west of the saddle"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-canadafern.jpg"
+  title : "<i>Athyrium filix-femina</i> spine"
+  caption : "Sault Sainte Marie, ON summer 2018"
+
+- href : "/img/welcome-carclock.jpg"
+  title : "Chrystler dashboard clock"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-clubchill.jpg"
+  title : "litter next to Frandor"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-dewleaves.jpg"
+  title : "dew in the Flowerpot Neighborhood"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-e49.jpg"
+  title : "Chrystler LCD display"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-ferngully.jpg"
+  title : "gully west of the saddle"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-ferntree.jpg"
+  title : "<i>Polystichum munitum</i> near McCulloch peak"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-ferntwist.jpg"
+  title : "twisted fern on Road 612.4"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-foglayer.jpg"
+  title : "clearcut next to the saddle"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-fogtrees.jpg"
+  title : "hillside west of the saddle"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-hillside.jpg"
+  title : "slope near McCulloch Peak"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-ivy.jpg"
+  title : "ivy in the Flowerpot Neighborhood"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-landingshadow.jpg"
+  title : "shadow on a landing"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-leaftire.jpg"
+  title : "fall leaves in the Brody Neighborhood"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-librarywindow.jpg"
+  title : "Michigan State library window"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-mosscurve.jpg"
+  title : "Road 700"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-mosslight.jpg"
+  title : "sunburst near Dimple Hill"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-newt.jpg"
+  title : "<i>Taricha granulosa</i> in the rain east of the saddle"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-ovenlight.jpg"
+  title : "oven light at dusk"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-peaveylake.jpg"
+  title : "Cronemiller Lake"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-pointyplant.jpg"
+  title : "<i>Mahonia nervosa</i> east of the saddle"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-rainbow.jpg"
+  title : "rainbow from Jackson Creek Road"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-roadkill.jpg"
+  title : "roadkill outside Biophysical Sciences"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-roadlight.jpg"
+  title : "forest road near Sulphur Springs"
+  caption : "Corvallis, OR winter 2018"
+
+- href : "/img/welcome-shadowdoor.jpg"
+  title : "Biophysical Sciences loading dock"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-spideripad.jpg"
+  title : "spider on an iPad"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-bridge.jpg"
+  title : "bridge at Kinsmen Park"
+  caption : "Sault Sainte Marie, ON summer 2018"
+
+- href : "/img/welcome-weedsun.jpg"
+  title : "curbside thistle"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-windowcat.jpg"
+  title : "windowsill cat in the Flowerpot Neighborhood"
+  caption : "East Lansing, MI fall 2018"
+
+- href : "/img/welcome-leafshadow.jpg"
+  title : "leaves in shadow"
+  caption : "Waterloo Recreation Area, MI fall 2018"
