Add iCER Student Highlights article

--- a/_data/elsewhere_posts.yml
+++ b/_data/elsewhere_posts.yml
@@ -1,3 +1,8 @@
+- title: "iCER Student Highlights: Matthew Andres Moreno"
+  url: "https://icer.msu.edu/about/announcements/icer-student-highlights-matthew-moreno"
+  where: "iCER News"
+  where_url: "https://icer.msu.edu/about/announcements/"
+  date: 2019-01-29
 - title: "Learning an Evolvable Genotype-Phenotype Map"
   url: "https://www3.beacon-center.org/blog/2018/06/25/learning-an-evolvable-genotype-phenotype-map/"
   where: "BEACON Blog"
