Correct Flowerpot captions

--- a/_data/welcome.yml
+++ b/_data/welcome.yml
@@ -519,7 +519,7 @@
   caption : "East Lansing, MI fall 2018"
 
 - href : "/img/welcome-dewleaves.jpg"
-  title : "dew in the Flowerpot Neighborhood"
+  title : "dew in the Oak Ridge Neighborhood"
   caption : "East Lansing, MI fall 2018"
 
 - href : "/img/welcome-e49.jpg"
@@ -551,7 +551,7 @@
   caption : "Corvallis, OR winter 2018"
 
 - href : "/img/welcome-ivy.jpg"
-  title : "ivy in the Flowerpot Neighborhood"
+  title : "ivy in the Oak Ridge Neighborhood"
   caption : "East Lansing, MI fall 2018"
 
 - href : "/img/welcome-landingshadow.jpg"
@@ -619,7 +619,7 @@
   caption : "East Lansing, MI fall 2018"
 
 - href : "/img/welcome-windowcat.jpg"
-  title : "windowsill cat in the Flowerpot Neighborhood"
+  title : "windowsill cat in the Oak Ridge Neighborhood"
   caption : "East Lansing, MI fall 2018"
 
 - href : "/img/welcome-leafshadow.jpg"
