--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ url: "https://mmore500.github.io" # the base hostname & protocol for your site
 twitter_username: morenomatthewa
 github_username:  mmore500
 
+permalink: /:year/:month/:day/:title:output_ext
+
 plugins_dir:
   - jemoji
 
