Track devolab's new domain

--- a/_data/devolab_posts.yml
+++ b/_data/devolab_posts.yml
@@ -1,15 +1,15 @@
 - title: "Reflections on My First Semester at MacDonald Middle School"
-  url: "http://devosoft.org/reflections-on-my-first-semester-at-macdonald-middle-school/"
+  url: "http://devolab.org/reflections-on-my-first-semester-at-macdonald-middle-school/"
   date: 2017-01-18
 
 - title: "Tidbits from a Workshop on Communicating Science"
-  url: "http://devosoft.org/tidbits-from-a-workshop-on-communicating-science/"
+  url: "http://devolab.org/tidbits-from-a-workshop-on-communicating-science/"
   date: 2017-12-08
 
 - title: "Information Theory through Toy Examples"
-  url: "http://devosoft.org/information-theory-through-toy-examples/"
+  url: "http://devolab.org/information-theory-through-toy-examples/"
   date: 2017-10-26
 
 - title: "Evolvability Series"
-  url: "http://devosoft.org/blog-series-on-evolvability/"
+  url: "http://devolab.org/blog-series-on-evolvability/"
   date: 2017-10-06
