Add proper timestamp

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,11 @@ plugins_dir:
 
 plugins:
   - jemoji
+  - jekyll-last-modified-at
+
+# Optional. The default date format, used if none is specified in the tag.
+last-modified-at:
+    date-format: '%d-%b-%y'
 
 # Build settings
 markdown: kramdown
