--- a/_data/elsewhere_posts.yml
+++ b/_data/elsewhere_posts.yml
@@ -1,3 +1,8 @@
+- title: "Sytemic Racism, Dispersed Harm, and #FireStephenHsu"
+  url: "https://threadreaderapp.com/thread/1274100353496039424.html"
+  where: "Thread reader"
+  where_url: "https://threadreaderapp.com/"
+  date: 2020-06-19
 - title: "std::bitset plus -msse4.2 equals popcnt"
   url: "https://mmore500.github.io/cse-491/blog/2019/11/20/bitset-popcnt.html"
   where: "CSE 491 Advanced C++ Seminar Blog"
