Add @kayakingcellist 's blog post

--- a/_data/mentees_collaborators_posts.yml
+++ b/_data/mentees_collaborators_posts.yml
@@ -5,3 +5,10 @@
   who: "Santiago Rodriguez-Papa"
   who_url: "https://github.com/rodsan0"
   date: 2020-01-24
+- title: "Prefabricated Web Tools"
+  url: "https://mmore500.com/waves/blog/prefab-tools.html"
+  where: "WAVES Workshop Blog"
+  where_url: "https://mmore500.com/waves/blog"
+  who: "Sara Boyd"
+  who_url: "https://github.com/kayakingcellist/"
+  date: 2020-07-31
