Add WAVES Closing Celebration elsewhere post

--- a/_data/elsewhere_posts.yml
+++ b/_data/elsewhere_posts.yml
@@ -1,3 +1,8 @@
+- title: "WAVES Closing Celebration"
+  url: "https://mmore500.com/waves/blog/celebration.html"
+  where: "WAVES Workshop Blog"
+  where_url: "https://mmore500.com/waves/blog"
+  date: 2020-08-03
 - title: "Sytemic Racism, Dispersed Harm, and #FireStephenHsu"
   url: "https://threadreaderapp.com/thread/1274100353496039424.html"
   where: "Thread reader"
