--- a/_data/mentees_collaborators_posts.yml
+++ b/_data/mentees_collaborators_posts.yml
@@ -12,3 +12,10 @@
   who: "Sara Boyd"
   who_url: "https://github.com/kayakingcellist/"
   date: 2020-07-31
+- title: "More Prefabricated Web Tools!"
+  url: "http://mmore500.com/waves/blog/more-prefab-tools.html"
+  where: "WAVES Workshop Blog"
+  where_url: "https://mmore500.com/waves/blog"
+  who: "Tait Wecht"
+  who_url: "https://github.com/kayakingcellist/"
+  date: 2021-08-20
