--- a/_data/elsewhere_posts.yml
+++ b/_data/elsewhere_posts.yml
@@ -1,3 +1,8 @@
+- title: "WAVES Workshop Learning Outcomes"
+  url: "https://mmore500.com/waves/blog/proficiency-satisfaction.html"
+  where: "WAVES Workshop Blog"
+  where_url: "https://mmore500.com/waves/blog"
+  date: 2022-05-18
 - title: "WAVES Closing Celebration"
   url: "https://mmore500.com/waves/blog/celebration.html"
   where: "WAVES Workshop Blog"
