Add teaching materials, extended abstract cats

--- a/_data/effluvia.yml
+++ b/_data/effluvia.yml
@@ -4,6 +4,8 @@
   slug: "conference"
 - title: "Workshop Papers"
   slug: "workshop"
+- title: "Extended Abstracts"
+  slug: "abstract"
 - title: "Preprints"
   slug: "preprint"
 - title: "Miscellanea"
@@ -14,3 +16,5 @@
   slug: "prosocial"
 - title: "Incidental Software"
   slug: "incidental"
+- title: "Teaching Materials"
+  slug: "teaching"
